# steadyinvest

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml  rust-toolchain.toml
.github/workflows/: e2e.yaml
_bmad-output/brainstorming/: brainstorming-session-2026-02-03.md
_bmad-output/implementation-artifacts/: 1-1-project-initialization-loco-starter.md  1-2-ticker-search-with-autocomplete.md  1-3-automated-10-year-historical-retrieval.md  1-4-historical-split-and-dividend-adjustment.md  1-5-multi-currency-normalization.md  2-1-logarithmic-ssg-chart-rendering.md  2-2-historical-growth-trend-visualization.md  2-3-quality-dashboard-roe-profit-on-sales.md  3-1-kinetic-trendline-projection-direct-manipulation.md  3-2-high-low-pe-range-calculation-projection.md  3-3-manual-data-override-system.md  4-1-thesis-locking-snapshot-generation.md  4-2-professional-ssg-report-export-pdf-image.md  4-3-analysis-file-persistence-open-save.md  5-1-api-health-monitoring-dashboard.md  5-2-data-integrity-audit-log.md  5-3-system-health-latency-monitor.md  6-1-investigate-and-fix-cagr-eps-slider-behavior.md  6-2-visual-and-graphical-refinements.md  6-3-ux-consistency-pass.md  6-4-responsive-design-improvements.md  6-5-e2e-test-suite-implementation.md  6-6-comprehensive-rust-documentation-pass.md  7-1-mvp-fixes-pdf-export-chart-height-legend.md  7-2-pre-migration-backup-snapshot-schema.md  7-3-analysis-snapshot-api.md  7-4-static-chart-image-capture-at-lock-time.md  7-5-exchange-rate-service.md  7-6-library-view-analysis-browsing.md  7-7-cicd-e2e-pipeline-validation.md  8-1-comparison-schema-api.md  8-2-comparison-view-ranked-grid.md  8-3-comparison-currency-handling.md  8-4-thesis-evolution-api.md  8-5-history-timeline-sidebar-side-by-side-comparison.md  8-6-responsive-design-e2e-tests-for-comparison-and-history.md  8b-1-ssg-handbook-audit-and-chart-fixes.md  8c-1-data-model-expansion-dividend-harvest.md  8c-2-dividend-yield-payout-ratio-total-return.md  8d-1-ci-fix-and-dev-environment.md  (+13 more)
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-02-03.md  implementation-readiness-report-2026-02-04.md  implementation-readiness-report-2026-02-11.md  prd-validation-report.md  prd.md  product-brief-naic-2026-02-03.md  sprint-change-proposal-2026-02-11.md  sprint-change-proposal-2026-02-19.md  ux-design-directions.html  ux-design-specification.md
_bmad/_config/: agent-manifest.csv  files-manifest.csv  (+2 more)
backend/: Cargo.toml  Dockerfile  test_output.txt  test_output_all.txt
backend/config/: development.yaml  test.yaml
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20260204_185151_tickers.rs  m20260204_195545_historicals.rs  m20260207_000158_add_adjustment_metadata_to_historicals.rs  m20260207_001419_exchange_rates.rs  m20260207_101051_add_quality_fields_to_historicals.rs  m20260207_181500_historicals_overrides.rs  m20260207_191500_locked_analyses.rs  m20260208_114000_provider_rate_limits.rs  m20260208_120000_audit_logs.rs  m20260212_000001_analysis_snapshots.rs  m20260212_000002_add_snapshot_deleted_at.rs  m20260215_000001_seed_default_user.rs  m20260216_000001_comparison_sets.rs  m20260314_000001_add_dividend_fields_to_historicals.rs
backend/src/: app.rs  lib.rs
backend/src/controllers/: analyses.rs  auth.rs  comparisons.rs  exchange_rates.rs  harvest.rs  mod.rs  overrides.rs  snapshot_metrics.rs  snapshots.rs  system.rs  tickers.rs
backend/src/data/: mod.rs
backend/src/fixtures/: historicals.yaml
backend/src/initializers/: mod.rs
backend/src/mailers/: auth.rs  mod.rs
backend/src/middlewares/: auth_ip.rs  mod.rs
backend/src/models/: analysis_snapshots.rs  audit_logs.rs  comparison_set_items.rs  comparison_sets.rs  exchange_rates.rs  historicals.rs  historicals_overrides.rs  locked_analyses.rs  mod.rs  provider_rate_limits.rs  tickers.rs  users.rs
backend/src/models/_entities/: analysis_snapshots.rs  audit_logs.rs  comparison_set_items.rs  comparison_sets.rs  exchange_rates.rs  historicals.rs  historicals_overrides.rs  locked_analyses.rs  mod.rs  prelude.rs  provider_rate_limits.rs  tickers.rs  users.rs
backend/src/services/: audit_service.rs  exchange.rs  exchange_rate_provider.rs  harvest.rs  mod.rs  provider_health.rs  reporting.rs  reporting_test.rs
backend/src/views/: auth.rs  mod.rs
backend/src/workers/: downloader.rs  mod.rs
backend/tests/models/: mod.rs  tickers.rs  users.rs
backend/tests/models/snapshots/: can_create_with_password@users.snap.new  can_find_by_pid@users.snap
backend/tests/requests/: analyses.rs  audit.rs  auth.rs  comparisons.rs  exchange_rates.rs  harvest.rs  mod.rs  snapshots.rs  system.rs  tickers.rs
backend/tests/requests/snapshots/: can_register@auth_request.snap.new  resend_verification_user@auth_request.snap.new
crates/naic-logic/: Cargo.toml
crates/naic-logic/src/: lib.rs
crates/steady-invest-logic/: Cargo.toml
crates/steady-invest-logic/src/: adjustments.rs  calculations.rs  currency.rs  lib.rs  projections.rs  types.rs
docs/: change-request.md  change-request_guy.md  change_request.md  definition-of-done.md  deployment-verification-checklist.md  lessons-learned-chart-rendering.md  living-documentation-process.md
frontend/: Cargo.toml  Dockerfile  index.html  nginx.conf
frontend/public/: chart_bridge.js  styles.scss
frontend/src/: lib.rs  main.rs  persistence.rs  types.rs
frontend/src/components/: analyst_hud.rs  command_strip.rs  compact_analysis_card.rs  footer.rs  history_timeline.rs  lock_thesis_modal.rs  mod.rs  override_modal.rs  quality_dashboard.rs  search_bar.rs  snapshot_comparison.rs  snapshot_hud.rs  ssg_chart.rs  valuation_panel.rs
frontend/src/pages/: audit_log.rs  comparison.rs  home.rs  library.rs  mod.rs  system_monitor.rs
frontend/src/state/: mod.rs
scripts/: migrate-safe.sh
tests/e2e/: Cargo.toml  README.md  serve_frontend.py
tests/e2e/src/: epic3_tests.rs  epic4_tests.rs  epic5_tests.rs  epic6_tests.rs  epic8_tests.rs  lib.rs
tests/e2e/src/common/: mod.rs
(+12 files in other folders)
