[workspace]
members = [
    "backend",
    "backend/migration",
    "frontend",
    "crates/steady-invest-logic",
    "tests/e2e",
]
resolver = "2"

[workspace.dependencies]
loco-rs = { version = "0.16" }
leptos = { version = "0.8" }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.45" }
axum = { version = "0.8" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sea-orm = { version = "1.1", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros", "with-uuid", "with-chrono"] }
migration = { path = "backend/migration" }
steady-invest-logic = { path = "crates/steady-invest-logic" }
rust_decimal = { version = "1", features = ["serde-float"] }
yahoo_finance_api = "3"
reqwest = { version = "0.12", features = ["json"] }
csv = "1.1"
