[package]
name = "backend"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "backend-cli"
description = "Loco-based REST API backend for NAIC stock selection guide analysis"

[dependencies]
loco-rs = { workspace = true }
naic-logic = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { version = "0.1" }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
regex = { version = "1.11" }
migration = { path = "migration" }
sea-orm = { workspace = true }
chrono = { version = "0.4" }
csv = "1.1"
validator = { version = "0.20" }
uuid = { version = "1.6", features = ["v4"] }
include_dir = { version = "0.7" }
rust_decimal = { workspace = true }
yahoo_finance_api = { workspace = true }
reqwest = { workspace = true }
charming = { version = "0.3.0", features = ["ssr"] }
genpdf = { version = "0.2.0", features = ["images"] }
resvg = "0.41.0"
tiny-skia = "0.11.0"
image = "0.24"

[[bin]]
name = "backend-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = { version = "3.1.1" }
rstest = { version = "0.25" }
insta = { version = "1.34", features = ["redactions", "yaml", "filters"] }
