[package]
name = "frontend"
version = "0.1.0"
edition = "2024"
description = "Leptos-based CSR frontend for SteadyInvest stock selection guide analysis"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
steady-invest-logic = { version = "0.1.0", path = "../crates/steady-invest-logic" }
gloo-net = "0.6.0"
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
charming = { version = "0.3", features = ["wasm"] }
rust_decimal = { workspace = true }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window", "HtmlAnchorElement", "Url", "Blob", "BlobPropertyBag", "HtmlInputElement", "FileList", "File", "ProgressEvent", "Performance"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
wasm-bindgen-futures = "0.4"

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"


[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
