[package]
name = "naic-logic"
version = "0.1.0"
edition = "2024"
description = "Core NAIC SSG business logic for financial analysis — growth, P/E, quality calculations"

[dependencies]
serde = { workspace = true, features = ["derive"] }
rust_decimal = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0"
