[package]
name = "e2e-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
thirtyfour = "0.31"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { workspace = true }
serde_json = { workspace = true }
steady-invest-logic = { workspace = true }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
rstest = "0.25"
